利用者側のユーザー登録機能実装

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -5,4 +5,44 @@
 @import 'variables';
 
 // Bootstrap
-@import '~bootstrap/scss/bootstrap';
+// @import '~bootstrap/scss/bootstrap';
+
+// ==========================================================================
+// Foundation
+// ==========================================================================
+@import "foundation/_reset";
+@import "foundation/_base";
+
+
+// ==========================================================================
+// Layout
+// ==========================================================================
+@import 'Layout/footer';
+@import 'Layout/header';
+@import 'Layout/main';
+// @import 'Layout/sidebar';
+
+// ==========================================================================
+// Object
+// ==========================================================================
+
+// -----------------------------------------------------------------
+// Component
+// -----------------------------------------------------------------
+@import 'Object/component/button';
+@import 'Object/component/header';
+@import 'Object/component/input';
+@import 'Object/component/label';
+@import 'Object/component/nav';
+@import 'Object/component/title';
+
+
+// -----------------------------------------------------------------
+// Project
+// -----------------------------------------------------------------
+@import 'Object/project/register';
+
+
+// -----------------------------------------------------------------
+// Utility
+// -----------------------------------------------------------------
