--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -17,3 +17,71 @@ $yellow: #ffed4a;
 $green: #38c172;
 $teal: #4dc0b5;
 $cyan: #6cb2eb;
+
+
+//===========================
+//変数
+//===========================
+$font-color_default: #333;
+$font-color_link-1: #333;
+$font-color_link-2: #fff;
+$font-color_main: #f66d9b;
+$font-color_hover: #fff;
+$font-color_hover2: #ff0000;
+$color_corp: #82765c;
+$font-color-sub1: #ccc;
+$font-color-sub2: #000;
+$font-color-sub3: #fff;
+
+
+$background-color_sub1: #333;
+$background-color_sub2: #fff;
+$background-color_sub3: #ccc;
+$background-color_main: #f6f5f4;
+$background-color_main2: #f66d9b;
+$background-color_hover: #f66d9b;
+$background-color_hover2: #000;
+
+$site-width: 980px;
+
+$font-size_s: 12px;
+$font-size_m: 14px;
+$font-size_default: 16px;
+$font-size_l: 18px;
+$font-size_xl: 24px;
+$font-size_xxl: 30px;
+$font-size_3l: 40px;
+
+$space_s: 5px;
+$space_m: 10px;
+$space_l: 15px;
+$space_xl: 20px;
+$space_xxl: 30px;
+$space_3l: 50px;
+
+$font-family_default: Quicksand, 游ゴシック体, "Yu Gothic", YuGothic, "ヒラギノ角ゴシック Pro", "Hiragino Kaku Gothic Pro", メイリオ, Meiryo, Osaka, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;
+
+$font-family_corp: 'Robot', sans-serif;
+
+//マップ型変数
+$breakpoints: (
+    'sm': 'screen and (max-width: 414px)',
+    'md': 'screen and (max-width: 768px)',
+    'lg': 'screen and (max-width: 1000px)',
+    'xl': 'screen and (max-width: 1200px)',
+) !default;
+
+//===========================
+//mixin
+//===========================
+@mixin mq($breakpoint: md){
+    @media #{map-get($breakpoints, $breakpoint)}{
+        @content;
+    }
+}
+
+@mixin mq($breakpoint: sm){
+    @media #{map-get($breakpoints, $breakpoint)}{
+        @content;
+    }
+}
