利用者側のログインログアウト機能実装、多言語対応

--- a/resources/sass/Object/Component/_input.scss
+++ b/resources/sass/Object/Component/_input.scss
@@ -1,8 +1,8 @@
 .c-input {
     background: #f6f5f4;
-    width: 230%;
+    width: 460px;
     border: 1px solid #000;
-    margin: 15px 0;
+    margin: 15px 12px;
     padding: 15px;
     box-sizing: border-box;
     font-size: 16px;
