--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -30,16 +30,19 @@
 // Component
 // -----------------------------------------------------------------
 @import 'Object/component/button';
+@import 'Object/component/error';
 @import 'Object/component/header';
 @import 'Object/component/input';
 @import 'Object/component/label';
 @import 'Object/component/nav';
+@import 'Object/component/table';
 @import 'Object/component/title';
 
 
 // -----------------------------------------------------------------
 // Project
 // -----------------------------------------------------------------
+@import 'Object/project/login';
 @import 'Object/project/register';
 
 
