--- a/public/css/app.css
+++ b/public/css/app.css
@@ -293,6 +293,11 @@ table {
   cursor: pointer;
 }
 
+.c-error {
+  display: block;
+  color: red;
+}
+
 .c-header {
   margin-left: 20px;
 }
@@ -322,9 +327,9 @@ table {
 
 .c-input {
   background: #f6f5f4;
-  width: 230%;
+  width: 460px;
   border: 1px solid #000;
-  margin: 15px 0;
+  margin: 15px 12px;
   padding: 15px;
   box-sizing: border-box;
   font-size: 16px;
@@ -555,6 +560,38 @@ table {
 .c-title__number {
   font-size: 18px;
   margin-top: 30px;
+}
+
+.p-login {
+  width: 100%;
+  display: flex;
+  background-color: #f6f5f4;
+}
+
+@media screen and (max-width: 768px) {
+  .p-login {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 414px) {
+  .p-login {
+    width: 100%;
+  }
+}
+
+.p-login__form {
+  background: #fff;
+  width: 650px;
+  margin: 135px auto;
+  padding: 40px;
+  text-align: center;
+  border: 1px solid #000;
+}
+
+.p-login__button {
+  display: flex;
+  justify-content: center;
 }
 
 .p-register {
