利用者側のパスワードリマインダー機能実装

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -42,9 +42,10 @@
 // -----------------------------------------------------------------
 // Project
 // -----------------------------------------------------------------
+@import 'Object/project/forgotpassword';
 @import 'Object/project/login';
 @import 'Object/project/register';
-
+@import 'Object/project/resetpassword';
 
 // -----------------------------------------------------------------
 // Utility
