--- a/public/css/app.css
+++ b/public/css/app.css
@@ -562,6 +562,27 @@ table {
   margin-top: 30px;
 }
 
+.p-forgotpassword {
+  display: flex;
+  align-items: center;
+  background-color: #fafafa;
+  height: 700px;
+}
+
+.p-forgotpassword__form {
+  background: #fff;
+  width: 650px;
+  margin: 15px auto;
+  padding: 40px;
+  text-align: center;
+  border: 1px solid #000;
+}
+
+.p-forgotpassword__button {
+  display: flex;
+  justify-content: center;
+}
+
 .p-login {
   width: 100%;
   display: flex;
@@ -611,6 +632,27 @@ table {
 }
 
 .p-register__button {
+  display: flex;
+  justify-content: center;
+}
+
+.p-resetpassword {
+  display: flex;
+  align-items: center;
+  background-color: #fafafa;
+  height: 700px;
+}
+
+.p-resetpassword__form {
+  background: #fff;
+  width: 650px;
+  margin: 15px auto;
+  padding: 40px;
+  text-align: center;
+  border: 1px solid #000;
+}
+
+.p-resetpassword__button {
   display: flex;
   justify-content: center;
 }
