--- a/resources/sass/Object/Component/_input.scss
+++ b/resources/sass/Object/Component/_input.scss
@@ -1,9 +1,9 @@
 .c-input {
     background: #f6f5f4;
-    width: 460px;
+    width: 300px;
     border: 1px solid #000;
-    margin: 15px 12px;
-    padding: 15px;
+    margin: 8px 0;
+    padding: 8px;
     box-sizing: border-box;
     font-size: 16px;
 }
