--- a/resources/sass/Object/Project/_register.scss
+++ b/resources/sass/Object/Project/_register.scss
@@ -1,15 +1,12 @@
 .p-register{
     display: flex;
-    align-items: center;
     background-color: #fafafa;
-    height: 700px;
 
     &__form{
         background: #fff;
-        width: 650px;
-        margin: 15px auto;
+        margin: 120px auto;
         padding: 40px;
-        text-align: center;
+        text-align: left;
         border: 1px solid #000;
     }
 
