--- a/resources/sass/Object/Project/_login.scss
+++ b/resources/sass/Object/Project/_login.scss
@@ -7,14 +7,13 @@
         width: 100%;
     }
     display: flex;
-    background-color: $background-color_main;
-
+    background-color: #fafafa;
+    
     &__form{
         background: #fff;
-        width: 650px;
-        margin: 135px auto;
+        margin: 120px auto;
         padding: 40px;
-        text-align: center;
+        text-align: left;
         border: 1px solid #000;
     }
 
