--- a/resources/sass/Object/Component/_title.scss
+++ b/resources/sass/Object/Component/_title.scss
@@ -5,12 +5,7 @@
     margin: $space_xxl 0;
     padding: 0; 
 
-    &__section{
-        font-weight: 900;
-        font-size: $font-size_xxl;
-    }
-    &__number{
-        font-size: $font-size_l;
-        margin-top: $space_xxl;
+    &__terms {
+        font-weight: bold;
     }
 }
