--- a/public/css/app.css
+++ b/public/css/app.css
@@ -313,6 +313,7 @@ body {
   display: block;
   color: red;
   font-size: 16px;
+  margin: 8px 0;
 }
 
 .c-header {
@@ -346,7 +347,7 @@ body {
   background: #f6f5f4;
   width: 320px;
   border: 1px solid #000;
-  margin: 8px 0;
+  margin: 16px 8px;
   padding: 8px;
   box-sizing: border-box;
   font-size: 16px;
@@ -587,6 +588,13 @@ body {
 .p-container__checkbox {
   display: flex;
   justify-content: center;
+  margin: 16px 0;
+}
+
+.p-container__link {
+  margin-bottom: 16px;
+  display: flex;
+  justify-content: center;
 }
 
 .p-forgotpassword {
@@ -596,7 +604,7 @@ body {
 
 .p-forgotpassword__form {
   background: #fff;
-  margin: 120px auto;
+  margin: 184px auto;
   padding: 40px;
   text-align: left;
   border: 1px solid #000;
@@ -619,7 +627,7 @@ body {
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
-  right: 8px;
+  right: 16px;
   cursor: pointer;
 }
 
@@ -650,6 +658,24 @@ body {
 }
 
 .p-login__button {
+  display: flex;
+  justify-content: center;
+}
+
+.p-profile {
+  display: flex;
+  background-color: #fafafa;
+}
+
+.p-profile__form {
+  background: #fff;
+  margin: 120px auto;
+  padding: 40px;
+  text-align: left;
+  border: 1px solid #000;
+}
+
+.p-profile__button {
   display: flex;
   justify-content: center;
 }
