--- a/resources/sass/Object/Component/_input.scss
+++ b/resources/sass/Object/Component/_input.scss
@@ -2,7 +2,7 @@
     background: #f6f5f4;
     width: 320px;
     border: 1px solid #000;
-    margin: 8px 0;
+    margin: 16px 8px;
     padding: 8px;
     box-sizing: border-box;
     font-size: 16px;
