--- a/resources/sass/Object/Project/_container.scss
+++ b/resources/sass/Object/Project/_container.scss
@@ -13,5 +13,12 @@
     &__checkbox {
         display: flex;
         justify-content: center;
+        margin: 16px 0;
+    }
+
+    &__link {
+        margin-bottom: 16px;
+        display: flex;
+        justify-content: center;
     }
 }
