--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -46,6 +46,7 @@
 @import 'Object/project/forgotpassword';
 @import 'Object/project/input';
 @import 'Object/project/login';
+@import 'Object/project/profile';
 @import 'Object/project/register';
 @import 'Object/project/resetpassword';
 
