利用者とコンビニのログイン後のマイページ遷移、の取得

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -343,6 +343,12 @@ body {
   line-height: 60px;
 }
 
+.c-icon {
+  width: 160px;
+  height: 160px;
+  margin: 16px 8px;
+}
+
 .c-input {
   background: #f6f5f4;
   width: 320px;
