--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -32,6 +32,7 @@
 @import 'Object/component/button';
 @import 'Object/component/error';
 @import 'Object/component/header';
+@import 'Object/component/icon';
 @import 'Object/component/input';
 @import 'Object/component/label';
 @import 'Object/component/nav';
