--- a/resources/sass/Object/Component/_icon.scss
+++ b/resources/sass/Object/Component/_icon.scss
@@ -1,5 +1,5 @@
 .c-icon {
-    width: 160px;
-    height: 160px;
-    margin: 16px 8px;
+    width: 200px;
+    height: 200px;
+    border-radius: 100%;
 }
