--- a/resources/sass/Object/Component/_textarea.scss
+++ b/resources/sass/Object/Component/_textarea.scss
@@ -1,4 +1,4 @@
-.c-input {
+.c-textarea {
     background: #f6f5f4;
     width: 320px;
     border: 1px solid #000;
@@ -7,14 +7,10 @@
     box-sizing: border-box;
     font-size: 16px;
 
-    &__hidden {
+    &__count {
         position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        opacity: 0;
-        z-index: 1;
-        cursor: pointer;
+        font-size: 14px;
+        right: 6px;
+        bottom: -3px;
     }
 }
