--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -37,6 +37,7 @@
 @import 'Object/component/label';
 @import 'Object/component/nav';
 @import 'Object/component/text';
+@import 'Object/component/textarea';
 @import 'Object/component/title';
 
 
@@ -45,11 +46,13 @@
 // -----------------------------------------------------------------
 @import 'Object/project/container';
 @import 'Object/project/forgotpassword';
+@import 'Object/project/image';
 @import 'Object/project/input';
 @import 'Object/project/login';
 @import 'Object/project/profile';
 @import 'Object/project/register';
 @import 'Object/project/resetpassword';
+@import 'Object/project/textarea';
 
 // -----------------------------------------------------------------
 // Utility
