--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -53,6 +53,7 @@
 @import 'Object/project/register';
 @import 'Object/project/resetpassword';
 @import 'Object/project/textarea';
+@import 'Object/project/withdraw';
 
 // -----------------------------------------------------------------
 // Utility
