--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -36,6 +36,7 @@
 @import 'Object/component/input';
 @import 'Object/component/label';
 @import 'Object/component/nav';
+@import 'Object/component/product';
 @import 'Object/component/text';
 @import 'Object/component/textarea';
 @import 'Object/component/title';
@@ -46,12 +47,14 @@
 // -----------------------------------------------------------------
 @import 'Object/project/container';
 @import 'Object/project/forgotpassword';
-@import 'Object/project/image';
+@import 'Object/project/icon';
 @import 'Object/project/input';
 @import 'Object/project/login';
+@import 'Object/project/product';
 @import 'Object/project/profile';
 @import 'Object/project/register';
 @import 'Object/project/resetpassword';
+@import 'Object/project/text';
 @import 'Object/project/textarea';
 @import 'Object/project/withdraw';
 
