--- a/resources/sass/Object/Project/_icon.scss
+++ b/resources/sass/Object/Project/_icon.scss
@@ -1,9 +1,9 @@
-.p-image {
+.p-icon {
     position: relative;
     width: 200px;
     height: 200px;
     border: 1px solid #000;
-    border-radius: 100%;
+    border-radius: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
