--- a/resources/sass/Object/Project/_product.scss
+++ b/resources/sass/Object/Project/_product.scss
@@ -10,10 +10,38 @@
         align-items: center;
         margin: 16px 8px;
         padding: 8px;
+
+        &--container {
+            display: flex;
+            justify-content: center;
+        }
     }
 
-    &__button{
+    &__index {
+        background: #fff;
+        margin: 120px auto;
+        padding: 40px;
+        text-align: left;
+        border: 1px solid #000;
+    }
+
+    &__list {
         display: flex;
-        justify-content: center;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        list-style: none;
+        padding: 0;
+    }
+
+    &__item {
+        flex: 0 0 calc(25% - 20px);
+        margin-bottom: 20px;
+        border: 1px solid #000;
+        padding: 24px;
+    }
+
+    &__button {
+        display: flex;
+        flex-direction: column;
     }
 }
