--- a/resources/sass/Object/Project/_product.scss
+++ b/resources/sass/Object/Project/_product.scss
@@ -19,6 +19,14 @@
 
     &__index {
         background: #fff;
+        margin: 120px;
+        padding: 40px;
+        text-align: left;
+        border: 1px solid #000;
+    }
+
+    &__form{
+        background: #fff;
         margin: 120px auto;
         padding: 40px;
         text-align: left;
