--- a/public/css/app.css
+++ b/public/css/app.css
@@ -584,8 +584,8 @@ body {
 }
 
 .c-product__picture {
-  min-width: 268px;
-  height: 200px;
+  width: 100%;
+  height: 100%;
 }
 
 .c-product__name {
