--- a/resources/sass/Object/Component/_product.scss
+++ b/resources/sass/Object/Component/_product.scss
@@ -1,7 +1,7 @@
 .c-product {
     &__picture {
-        min-width: 268px;
-        height: 200px;
+        width: 100%;
+        height: 100%;
     }
 
     &__name {
