watchを追加してcurrentPageを更新、ユーザー登録画面、ログイン画面、マイページのFLOCSSとレスポンシブデザイン実装

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -216,7 +216,7 @@ body {
   text-align: center;
   background-color: #aaa;
   color: #333;
-  padding: 30px;
+  padding: 40px;
 }
 
 #l-footer__text {
@@ -246,10 +246,10 @@ body {
   height: 60px;
   line-height: 50px;
   color: #333;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding-left: 32px;
+  padding-right: 32px;
   transition: 0.3s;
-  background-color: #aaa;
+  background-color: #f5f5f5;
 }
 
 .l-header.float-active {
@@ -260,19 +260,11 @@ body {
   opacity: 0.9;
 }
 
-@media screen and (max-width: 768px) {
-  .l-header {
-    height: 100px;
-    padding-right: 15px;
-    padding-left: 15px;
-  }
-}
-
 @media screen and (max-width: 414px) {
   .l-header {
     height: 60px;
-    padding-right: 15px;
-    padding-left: 15px;
+    padding-right: 24px;
+    padding-left: 24px;
   }
 }
 
@@ -283,29 +275,251 @@ body {
 
 @media screen and (max-width: 414px) {
   .l-header__inner {
-    margin-top: 5px;
+    margin-top: 8px;
   }
+}
+
+.l-header__title {
+  font-family: Arial;
+  font-style: italic;
+  font-weight: bold;
+  font-size: 50px;
+  text-decoration: none;
+  color: #434343;
+  line-height: 60px;
 }
 
 .l-main {
   width: 100%;
-  background-color: #f6f5f4;
+}
+
+.l-main__user {
+  background-color: #efffff;
+  padding: 120px 180px;
+}
+
+@media screen and (max-width: 414px) {
+  .l-main__user {
+    padding: 24px;
+  }
+}
+
+.l-main__convenience {
+  background-color: #ffefff;
+  padding: 120px 180px;
+}
+
+@media screen and (max-width: 414px) {
+  .l-main__convenience {
+    padding: 24px;
+  }
+}
+
+.l-nav__menu {
+  display: flex;
+  align-items: center;
+  font-family: "Robot", sans-serif;
+}
+
+@media screen and (max-width: 414px) {
+  .l-nav__menu {
+    display: block;
+    position: fixed;
+    top: 0;
+    right: -100%;
+    background: rgba(0, 0, 0, 0.7);
+    width: 100%;
+    height: 100vh;
+    padding-top: 48px;
+    transition: 0.5s;
+    z-index: 2;
+  }
+
+  .l-nav__menu.is-active {
+    transition: 0.5s;
+    transform: translateX(-100%);
+  }
+}
+
+.l-nav__menu--trigger {
+  display: none;
+  transition: all 0.4s;
+  box-sizing: border-box;
+  position: relative;
+  width: 40px;
+  height: 32px;
+  z-index: 3;
+}
+
+@media screen and (max-width: 414px) {
+  .l-nav__menu--trigger {
+    display: inline-block;
+    margin-top: 16px;
+  }
+}
+
+.l-nav__menu--trigger span {
+  display: inline-block;
+  transition: all 0.4s;
+  box-sizing: border-box;
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: 4px;
+  background-color: #333;
+  border-radius: 4px;
+}
+
+.l-nav__menu--trigger span:nth-of-type(1) {
+  top: 0;
+}
+
+.l-nav__menu--trigger span:nth-of-type(2) {
+  top: 14px;
+}
+
+.l-nav__menu--trigger span:nth-of-type(3) {
+  bottom: 0;
+}
+
+.l-nav__menu--trigger.is-active span:nth-of-type(1) {
+  transform: translateY(12px) rotate(-45deg);
+}
+
+.l-nav__menu--trigger.is-active span:nth-of-type(2) {
+  opacity: 0;
+}
+
+.l-nav__menu--trigger.is-active span:nth-of-type(3) {
+  transform: translateY(-15px) rotate(45deg);
+}
+
+.l-nav__menu--list {
+  display: flex;
+  align-items: center;
+}
+
+@media screen and (max-width: 414px) {
+  .l-nav__menu--list {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    padding: 40px;
+  }
+}
+
+.l-nav__menu--link {
+  font-size: 14px;
+  margin: 0 32px;
+  color: #000;
+  text-decoration: none;
+  position: relative;
+}
+
+.l-nav__menu--link::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: 1px;
+  background: #000;
+  bottom: -1px;
+  transform: scale(0, 1);
+  transform-origin: left top;
+  transition: transform 0.3s;
+}
+
+.l-nav__menu--link:hover::after {
+  transform: scale(1, 1);
+}
+
+.l-nav__menu--item {
+  list-style: none;
+  line-height: 60px;
+}
+
+.l-nav__menu--icon {
+  display: inline-block;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+}
+
+.l-nav__menu--name {
+  font-size: 14px;
+}
+
+@media screen and (max-width: 414px) {
+  .l-nav__menu {
+    display: block;
+    font-size: 30px;
+  }
+
+  .l-nav__menu--item {
+    margin-right: initial;
+  }
+
+  .l-nav__menu--link {
+    -webkit-font-smoothing: initial;
+    display: block;
+    padding: 48px;
+    text-align: center;
+    color: #fff;
+  }
+}
+
+.l-sidebar {
+  background: #f5f5f5;
 }
 
 .c-button {
-  background: #fff;
-  margin: 15px 0;
-  padding: 8px 32px;
-  font-size: 16px;
-  transition: 0.5s;
-  border: 2px solid #f66d9b;
-  border-radius: 3px;
   text-decoration: none;
+  border-radius: 3px;
+  background: #fefefe;
+}
+
+.c-button__submit {
+  padding: 8px;
+  font-size: 16px;
+  transition: 0.3s;
+  width: 504px;
+  font-weight: bold;
+}
+
+@media screen and (max-width: 414px) {
+  .c-button__submit {
+    width: 286px;
+  }
+}
+
+.c-button__user {
+  border: 2px solid #00bfff;
+}
+
+.c-button__user:hover {
+  background: #00bfff;
+}
+
+.c-button__convenience {
+  border: 2px solid #ff1493;
+}
+
+.c-button__convenience:hover {
+  background: #ff1493;
 }
 
 .c-button:hover {
-  background: #f66d9b;
+  color: #fefefe;
+  font-weight: bold;
   cursor: pointer;
+}
+
+.c-button__detail {
+  display: block;
+  color: #434343;
+  font-size: 12px;
+  padding: 8px;
+  margin: 8px;
 }
 
 .c-button__purchase:disabled {
@@ -313,38 +527,64 @@ body {
   cursor: not-allowed;
 }
 
+.c-card {
+  max-width: 200px;
+  height: 100%;
+  border: 1px solid #434343;
+}
+
+.c-card__picture {
+  width: 85%;
+}
+
+.c-card__name {
+  text-align: center;
+  font-size: 12px;
+  font-weight: bold;
+}
+
+.c-card__price {
+  font-size: 12px;
+  display: flex;
+  justify-content: center;
+}
+
+.c-card__date {
+  font-size: 12px;
+  display: flex;
+  justify-content: center;
+}
+
+.c-checkbox__container {
+  display: flex;
+  margin: 16px 0;
+  align-items: center;
+  justify-content: center;
+}
+
 .c-error {
   display: block;
   color: red;
   font-size: 16px;
   margin: 8px 0;
-}
-
-.c-header {
-  margin-left: 20px;
-}
-
-@media screen and (max-width: 768px) {
-  .c-header {
-    height: 90px;
-  }
+  font-weight: bold;
 }
 
 @media screen and (max-width: 414px) {
-  .c-header {
-    margin-left: 0;
-    height: 50px;
+  .c-error {
+    font-size: 8px;
   }
 }
 
-.c-header__title {
-  font-family: Arial;
-  font-style: italic;
-  font-weight: bold;
-  font-size: 50px;
-  text-decoration: none;
-  color: #000;
-  line-height: 60px;
+.c-form {
+  padding: 40px 248px;
+  background: #fefefe;
+}
+
+@media screen and (max-width: 414px) {
+  .c-form {
+    padding: 16px;
+  }
 }
 
 .c-icon {
@@ -355,12 +595,33 @@ body {
 
 .c-input {
   background: #f6f5f4;
-  width: 320px;
+  width: 360px;
   border: 1px solid #000;
   margin: 16px 8px;
   padding: 8px;
   box-sizing: border-box;
   font-size: 16px;
+}
+
+@media screen and (max-width: 414px) {
+  .c-input {
+    width: 200px;
+    height: 24px;
+    border: 0.5px solid #434343;
+    margin: 8px;
+    padding: 8px;
+    overflow-y: auto;
+    font-size: 12px;
+    line-height: 1.2;
+  }
+
+  .c-input::-moz-placeholder {
+    font-size: 8px;
+  }
+
+  .c-input::placeholder {
+    font-size: 8px;
+  }
 }
 
 .c-input__hidden {
@@ -374,242 +635,75 @@ body {
   cursor: pointer;
 }
 
+.c-input.is-invalid {
+  background-color: #ffcccc;
+  /* エラーが発生した際の背景色 */
+}
+
 .c-label {
   font-size: 16px;
-  color: #333;
-}
-
-.c-nav__menu {
-  display: flex;
-  align-items: center;
-  font-family: "Robot", sans-serif;
-}
-
-@media screen and (max-width: 768px) {
-  .c-nav__menu {
-    display: block;
-    position: fixed;
-    top: 0;
-    right: -100%;
-    background: rgba(0, 0, 0, 0.7);
-    width: 100%;
-    height: 100vh;
-    padding-top: 50px;
-    transition: 0.5s;
-    z-index: 2;
-  }
-
-  .c-nav__menu.is-active {
-    transition: 0.5s;
-    transform: translateX(-100%);
-    z-index: 2;
-  }
+  color: #434343;
 }
 
 @media screen and (max-width: 414px) {
-  .c-nav__menu {
-    display: block;
-    position: fixed;
-    top: 0;
-    right: -100%;
-    background: rgba(0, 0, 0, 0.7);
-    width: 100%;
-    height: 100vh;
-    padding-top: 50px;
-    transition: 0.5s;
-  }
-
-  .c-nav__menu.is-active {
-    transition: 0.5s;
-    transform: translateX(-100%);
+  .c-label {
+    font-size: 8px;
   }
 }
 
-.c-nav__menu--trigger {
-  display: none;
-  transition: all 0.4s;
-  box-sizing: border-box;
-  position: relative;
-  width: 40px;
-  height: 32px;
-  z-index: 3;
-}
-
-@media screen and (max-width: 768px) {
-  .c-nav__menu--trigger {
-    display: inline-block;
-    margin-top: 30px;
-    margin-right: 30px;
-  }
-}
-
-@media screen and (max-width: 414px) {
-  .c-nav__menu--trigger {
-    display: inline-block;
-    margin-top: 10px;
-  }
-}
-
-.c-nav__menu--trigger span {
-  display: inline-block;
-  transition: all 0.4s;
-  box-sizing: border-box;
-  position: absolute;
-  left: 0;
-  width: 100%;
-  height: 4px;
-  background-color: #333;
-  border-radius: 4px;
-}
-
-.c-nav__menu--trigger span:nth-of-type(1) {
-  top: 0;
-}
-
-.c-nav__menu--trigger span:nth-of-type(2) {
-  top: 14px;
-}
-
-.c-nav__menu--trigger span:nth-of-type(3) {
-  bottom: 0;
-}
-
-.c-nav__menu--trigger.active span:nth-of-type(1) {
-  transform: translateY(12px) rotate(-45deg);
-}
-
-.c-nav__menu--trigger.active span:nth-of-type(2) {
-  opacity: 0;
-}
-
-.c-nav__menu--trigger.active span:nth-of-type(3) {
-  transform: translateY(-15px) rotate(45deg);
-}
-
-.c-nav__menu--list {
-  display: flex;
-  align-items: center;
-}
-
-@media screen and (max-width: 768px) {
-  .c-nav__menu--list {
-    display: inline-block;
-  }
-}
-
-@media screen and (max-width: 414px) {
-  .c-nav__menu--list {
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    padding: 30px;
-  }
-}
-
-.c-nav__menu--link {
-  font-size: 14px;
-  margin: 0 20px;
-  color: #000;
+.c-link {
+  display: inline;
+  text-align: center;
   text-decoration: none;
-  position: relative;
+  color: #434343;
 }
 
-.c-nav__menu--link::after {
-  content: "";
-  position: absolute;
-  left: 0;
-  width: 100%;
-  height: 1px;
-  background: #000;
-  bottom: -1px;
-  transform: scale(0, 1);
-  transform-origin: left top;
-  transition: transform 0.3s;
+.c-link:hover {
+  text-decoration: underline;
 }
 
-.c-nav__menu--link:hover::after {
-  transform: scale(1, 1);
+.c-link__products {
+  text-align: right;
 }
 
-.c-nav__menu--item {
-  list-style: none;
-}
-
-.c-nav__menu--user {
-  display: flex;
-  align-items: center;
-}
-
-.c-nav__menu--username {
-  margin-right: 10px;
-}
-
-@media screen and (max-width: 414px) {
-  .c-nav__menu {
-    display: block;
-    font-size: 30px;
-  }
-
-  .c-nav__menu--item {
-    margin-right: initial;
-  }
-
-  .c-nav__menu--link {
-    -webkit-font-smoothing: initial;
-    display: block;
-    padding: 50px;
-    text-align: center;
-    color: #fff;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .c-nav__menu {
-    display: flex;
-    flex-direction: column;
-    font-size: 30px;
-  }
-
-  .c-nav__menu--item {
-    margin-right: initial;
-  }
-
-  .c-nav__menu--link {
-    -webkit-font-smoothing: initial;
-    display: block;
-    padding: 50px;
-    text-align: center;
-    color: #fff;
-  }
+.c-link__back {
+  display: inline-block;
 }
 
 .c-product__picture {
-  width: 100%;
-  height: 100%;
+  width: 50%;
 }
 
 .c-product__name {
-  font-size: 18px;
+  font-size: 12px;
   font-weight: bold;
 }
 
 .c-product__price {
-  font-size: 14px;
+  font-size: 12px;
   display: flex;
   justify-content: center;
 }
 
 .c-product__date {
-  font-size: 14px;
+  font-size: 12px;
   display: flex;
   justify-content: center;
 }
 
-.c-text {
-  position: absolute;
-  font-size: 12px;
-  left: 8px;
-  bottom: 0px;
+.c-text__agreement {
+  font-size: 16px;
+}
+
+@media screen and (max-width: 414px) {
+  .c-text__agreement {
+    font-size: 12px;
+  }
+}
+
+.c-text__max {
+  display: flex;
+  justify-content: flex-end;
 }
 
 .c-textarea {
@@ -630,43 +724,45 @@ body {
 }
 
 .c-title {
-  font-size: 24px;
-  color: #333;
+  color: #434343;
+  font-size: 32px;
+  font-weight: bold;
   text-align: center;
-  margin: 30px 0;
-  padding: 0;
+}
+
+@media screen and (max-width: 414px) {
+  .c-title {
+    font-size: 16px;
+  }
+}
+
+.c-title__sub {
+  font-size: 24px;
+  text-align: left;
 }
 
 .c-title__terms {
   font-weight: bold;
 }
 
-.p-container {
-  width: 980px;
-  margin: 0 auto;
-}
-
-.p-container__terms {
-  height: 200px;
-  border: solid;
-  margin: 8px 0;
-  padding: 8px;
-  width: 480px;
-  overflow-y: auto;
+.p-article {
   font-size: 12px;
-  line-height: 1.2;
 }
 
-.p-container__checkbox {
+.p-article__mypage {
   display: flex;
-  justify-content: center;
-  margin: 16px 0;
 }
 
-.p-container__link {
-  margin-bottom: 16px;
-  display: flex;
-  justify-content: center;
+@media screen and (max-width: 414px) {
+  .p-article__mypage {
+    display: block;
+  }
+}
+
+@media screen and (max-width: 414px) {
+  .p-article {
+    font-size: 8px;
+  }
 }
 
 .p-forgotpassword {
@@ -716,35 +812,40 @@ body {
   cursor: pointer;
 }
 
-.p-login {
-  width: 100%;
+.p-mypage__sidebar {
   display: flex;
-  background-color: #fafafa;
+  flex-direction: column;
+  width: 180px;
 }
 
-@media screen and (max-width: 768px) {
-  .p-login {
-    width: 100%;
-  }
+.p-mypage__purchased,
+.p-mypage__liked,
+.p-mypage__sale {
+  background: #fefefe;
+}
+
+.p-product__list {
+  width: 746px;
+  display: flex;
+  text-align: center;
 }
 
 @media screen and (max-width: 414px) {
-  .p-login {
+  .p-product__list {
     width: 100%;
+    flex-wrap: wrap;
   }
 }
 
-.p-login__form {
-  background: #fff;
-  margin: 120px auto;
-  padding: 40px;
-  text-align: left;
-  border: 1px solid #000;
+.p-product__item {
+  padding: 8px;
 }
 
-.p-login__button {
-  display: flex;
-  justify-content: center;
+@media screen and (max-width: 414px) {
+  .p-product__item {
+    width: 50%;
+    padding: 8px 0;
+  }
 }
 
 .p-product__picture {
@@ -758,11 +859,6 @@ body {
   align-items: center;
   margin: 16px 8px;
   padding: 8px;
-}
-
-.p-product__picture--container {
-  display: flex;
-  justify-content: center;
 }
 
 .p-product__index {
@@ -781,24 +877,12 @@ body {
   border: 1px solid #000;
 }
 
-.p-product__list {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  list-style: none;
-  padding: 0;
-}
-
-.p-product__item {
-  flex: 0 0 calc(25% - 20px);
-  margin-bottom: 20px;
-  border: 1px solid #000;
-  padding: 24px;
+.p-product__container {
+  width: 320px;
 }
 
 .p-product__button {
   display: flex;
-  flex-direction: column;
 }
 
 .p-profile {
@@ -820,21 +904,38 @@ body {
 }
 
 .p-register {
-  display: flex;
-  background-color: #fafafa;
-}
-
-.p-register__form {
-  background: #fff;
-  margin: 120px auto;
   padding: 40px;
-  text-align: left;
-  border: 1px solid #000;
+  border: 0.5px solid #434343;
 }
 
-.p-register__button {
-  display: flex;
-  justify-content: center;
+@media screen and (max-width: 414px) {
+  .p-register {
+    padding: 24px;
+  }
+}
+
+.p-register__terms {
+  height: 200px;
+  border: 0.5px solid #434343;
+  margin: 8px;
+  padding: 8px;
+  width: 466px;
+  overflow-y: auto;
+  font-size: 12px;
+  line-height: 1.2;
+}
+
+@media screen and (max-width: 414px) {
+  .p-register__terms {
+    height: 200px;
+    border: 0.5px solid #434343;
+    margin: 8px;
+    padding: 8px;
+    overflow-y: auto;
+    font-size: 12px;
+    line-height: 1.2;
+    width: 250px;
+  }
 }
 
 .p-resetpassword {
@@ -882,5 +983,65 @@ body {
 .p-withdraw__button {
   display: flex;
   justify-content: center;
+}
+
+.u-m__s {
+  margin: 8px;
+}
+
+.u-mr__s {
+  margin-right: 8px;
+}
+
+.u-ml__s {
+  margin-left: 8px;
+}
+
+.u-mt__s {
+  margin-top: 8px;
+}
+
+.u-mb__s {
+  margin-bottom: 8px;
+}
+
+.u-m__m {
+  margin: 16px;
+}
+
+.u-mt__m {
+  margin-top: 16px;
+}
+
+.u-mt__xl {
+  margin-top: 32px;
+}
+
+.u-mb__xl {
+  margin-bottom: 32px;
+}
+
+.u-pd__s {
+  padding: 8px;
+}
+
+.u-pd__xl {
+  padding: 32px;
+}
+
+.u-pdt__s {
+  padding-top: 8px;
+}
+
+.u-pdb__s {
+  padding-bottom: 8px;
+}
+
+.u-pdr__s {
+  padding-right: 8px;
+}
+
+.u-pdl__s {
+  padding-left: 8px;
 }
 
