--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -20,7 +20,8 @@
 @import 'Layout/footer';
 @import 'Layout/header';
 @import 'Layout/main';
-// @import 'Layout/sidebar';
+@import 'Layout/nav';
+@import 'Layout/sidebar';
 
 // ==========================================================================
 // Object
@@ -30,12 +31,14 @@
 // Component
 // -----------------------------------------------------------------
 @import 'Object/component/button';
+@import 'Object/component/card';
+@import 'Object/component/checkbox';
 @import 'Object/component/error';
-@import 'Object/component/header';
+@import 'Object/component/form';
 @import 'Object/component/icon';
 @import 'Object/component/input';
 @import 'Object/component/label';
-@import 'Object/component/nav';
+@import 'Object/component/link';
 @import 'Object/component/product';
 @import 'Object/component/text';
 @import 'Object/component/textarea';
@@ -45,11 +48,11 @@
 // -----------------------------------------------------------------
 // Project
 // -----------------------------------------------------------------
-@import 'Object/project/container';
+@import 'Object/project/article';
 @import 'Object/project/forgotpassword';
 @import 'Object/project/icon';
 @import 'Object/project/input';
-@import 'Object/project/login';
+@import 'Object/project/mypage';
 @import 'Object/project/product';
 @import 'Object/project/profile';
 @import 'Object/project/register';
@@ -61,3 +64,5 @@
 // -----------------------------------------------------------------
 // Utility
 // -----------------------------------------------------------------
+@import 'Object/utility/m-x';
+@import 'Object/utility/pd-x';
