--- a/resources/sass/Layout/_header.scss
+++ b/resources/sass/Layout/_header.scss
@@ -7,7 +7,7 @@
     padding-left: $space_xl;
     padding-right: $space_xl;
     transition: .3s;
-    background-color: #aaa;
+    background-color: #f5f5f5;
 
     &.float-active{
         position: fixed;
@@ -16,11 +16,7 @@
         background: $background-color_sub2;
         opacity: 0.9;
     }
-    @include mq(md){
-        height: 100px;
-        padding-right: $space_l;
-        padding-left: $space_l;
-    }
+
     @include mq(sm){
         height: 60px;
         padding-right: $space_l;
@@ -33,5 +29,15 @@
         @include mq(sm){
             margin-top: $space_s;
         }
+    }
+
+    &__title {
+        font-family: Arial;
+        font-style: italic;
+        font-weight: bold;
+        font-size: 50px;
+        text-decoration: none;
+        color: #434343;
+        line-height: 60px;
     }
 }
