--- a/resources/sass/Layout/_nav.scss
+++ b/resources/sass/Layout/_nav.scss
@@ -1,10 +1,10 @@
-.c-nav {
+.l-nav {
     &__menu{
         display: flex;
         align-items: center;
         font-family: $font-family_corp;
 
-        @include mq(md){
+        @include mq(sm){
             display: block;
             position: fixed;
             top: 0;
@@ -19,44 +19,24 @@
             &.is-active{
                 transition: .5s;
                 transform: translateX(-100%);
-                z-index: 2;
-            }
-        }
-
-        @include mq(sm){
-            display: block;
-            position: fixed;
-            top: 0;
-            right: -100%;
-            background: rgba(0, 0, 0, .7);
-            width: 100%;
-            height: 100vh;
-            padding-top: $space_3l;
-            transition: .5s;
-
-            &.is-active{
-                transition: .5s;
-                transform: translateX(-100%);
             }    
         }
     
         &--trigger{
             display: none;
-            @include mq(md){
-                display: inline-block;
-                margin-top: $space_xxl;
-                margin-right: $space_xxl;
-            }
+
             @include mq(sm){
                 display: inline-block;
                 margin-top: $space_m;
             }
+
             transition: all .4s;
             box-sizing: border-box;
             position: relative;
             width: 40px;
             height: 32px;
             z-index: 3;
+
             span{
                 display: inline-block;
                 transition: all .4s;
@@ -77,7 +57,7 @@
                     bottom: 0;
                 }
             }
-            &.active span{
+            &.is-active span{
                 &:nth-of-type(1){
                     transform: translateY(12px) rotate(-45deg);
                 }
@@ -93,9 +73,7 @@
         &--list {
             display: flex;
             align-items: center;
-            @include mq(md){
-                display: inline-block;
-            }
+
             @include mq(sm){
                 text-align: center;
                 display: flex;
@@ -130,35 +108,22 @@
 
         &--item {
             list-style: none;
+            line-height: 60px;
         }
 
-        &--user {
-            display: flex;
-            align-items: center;
+        &--icon {
+            display: inline-block;
+            width: 30px;
+            height: 30px;
+            border-radius: 50%;
         }
 
-        &--username {
-            margin-right: $space_m;
+        &--name {
+            font-size: 14px;
         }
 
         @include mq(sm){
             display: block;
-            font-size: $font-size_xxl;
-            &--item{
-                margin-right: initial;
-            }
-            &--link{
-                -webkit-font-smoothing: initial;
-                display: block;
-                padding: $space_3l;
-                text-align: center;
-                color: $font-color-sub3;
-            }
-        }
-
-        @include mq(md){
-            display: flex;
-            flex-direction: column;
             font-size: $font-size_xxl;
             &--item{
                 margin-right: initial;
