--- a/resources/sass/Object/Component/_error.scss
+++ b/resources/sass/Object/Component/_error.scss
@@ -3,4 +3,9 @@
     color: red;
     font-size: 16px;
     margin: 8px 0;
+    font-weight: bold;
+
+    @include mq(sm){
+        font-size: 8px;
+    }
 }
