--- a/resources/sass/Object/Component/_input.scss
+++ b/resources/sass/Object/Component/_input.scss
@@ -1,11 +1,26 @@
 .c-input {
     background: #f6f5f4;
-    width: 320px;
+    width: 360px;
     border: 1px solid #000;
     margin: 16px 8px;
     padding: 8px;
     box-sizing: border-box;
     font-size: 16px;
+
+    @include mq(sm){
+        width: 200px;
+        height: 24px;
+        border: 0.5px solid #434343;
+        margin: 8px;
+        padding: 8px;
+        overflow-y: auto;
+        font-size: 12px;
+        line-height: 1.2;
+
+        &::placeholder {
+            font-size: 8px;
+        }
+    }
 
     &__hidden {
         position: absolute;
@@ -18,3 +33,8 @@
         cursor: pointer;
     }
 }
+
+.c-input.is-invalid {
+    background-color: #ffcccc; /* エラーが発生した際の背景色 */
+}
+
