--- a/resources/sass/Object/Component/_text.scss
+++ b/resources/sass/Object/Component/_text.scss
@@ -1,6 +1,14 @@
 .c-text {
-    position: absolute;
-    font-size: 12px;
-    left: 8px;
-    bottom: 0px;
+    &__agreement {
+        font-size: 16px;
+    
+        @include mq(sm){
+            font-size: 12px;
+        }
+    }
+
+    &__max {
+        display: flex;
+        justify-content: flex-end;
+    }
 }
