--- a/resources/sass/Object/Project/_product.scss
+++ b/resources/sass/Object/Project/_product.scss
@@ -1,4 +1,23 @@
 .p-product {
+    &__list {
+        width: 746px;
+        display: flex;
+        text-align: center;
+
+        @include mq(sm){
+            width: 100%;
+            flex-wrap: wrap;
+        }
+    }
+
+    &__item {
+        padding: 8px;
+        @include mq(sm){
+            width: 50%;
+            padding: 8px 0;
+        }
+    }
+
     &__picture {
         position: relative;
         width: 200px;
@@ -11,10 +30,6 @@
         margin: 16px 8px;
         padding: 8px;
 
-        &--container {
-            display: flex;
-            justify-content: center;
-        }
     }
 
     &__index {
@@ -33,23 +48,11 @@
         border: 1px solid #000;
     }
 
-    &__list {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-around;
-        list-style: none;
-        padding: 0;
-    }
-
-    &__item {
-        flex: 0 0 calc(25% - 20px);
-        margin-bottom: 20px;
-        border: 1px solid #000;
-        padding: 24px;
+    &__container{
+        width: 320px;
     }
 
     &__button {
         display: flex;
-        flex-direction: column;
     }
 }
